# LibraryManager

./: .clang-format  AboutDialog.cpp  AboutDialog.h  AddItemDialog.cpp  AddItemDialog.h  AddItemDialog.ui  CMakeLists.txt  DeleteDialog.cpp  DeleteDialog.h  DeleteDialog.ui  LibraryManager.cpp  LibraryManager.h  LibraryManager.sln  LibraryManager.ui  LibraryManager.vcxproj  LibraryManager.vcxproj.filters  Picture.cpp  Picture.h  README.md  SearchItemDialog.cpp  SearchItemDialog.h  VideoCD.cpp  VideoCD.h  book.cpp  book.h  dataio.cpp  dataio.h  installer.nsi  libmedia.cpp  libmedia.h  main.cpp  utils.cpp  utils.h  valid.cpp  valid.h
include/: AboutDialog.h  AddItemDialog.h  DeleteDialog.h  Picture.h  SearchItemDialog.h  VideoCD.h  book.h  dataio.h  libmedia.h  mainwindow.h  utils.h  valid.h
src/: AboutDialog.cpp  AboutDialog.ui  AddItemDialog.cpp  AddItemDialog.ui  DeleteDialog.cpp  Picture.cpp  SearchItemDialog.cpp  SearchItemDialog.ui  VideoCD.cpp  book.cpp  dataio.cpp  libmedia.cpp  mainwindow.cpp  mainwindow.ui  utils.cpp  valid.cpp
